@@ -5,6 +5,7 @@ import TestData.JourneyPlanSetupData;
 import TestSetUp.Base;
 import org.testng.annotations.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class JourneyPlanSetupTest extends Base {
@@ -17,13 +18,13 @@ public class JourneyPlanSetupTest extends Base {
         journeyPlanSetupPage.NavigateToJourneyPlanSetup();
         journeyPlanSetupPage.JourneyPlanInfo(journeyPlanName, description, startDate, endDate, country, division);
 
-        List<String> Weeks = List.of("1", "2", "3");
+        List<String> Weeks = Arrays.asList("1", "2", "3");
         journeyPlanSetupPage.ScheduleWeekWise(Weeks);
         journeyPlanSetupPage.AssignToRoutes(routeName);
 
-        List<String> WeeksWise = List.of("week1", "week2");
-        List<String> DayNames = List.of("Monday", "Tuesday");// ,"Wednesday"
-        List<String> CustomerCodes = List.of("96619964", "96619964"); // "96619962","96619958" "C76801" ,"C75741"
+        List<String> WeeksWise = Arrays.asList("week1", "week2");
+        List<String> DayNames = Arrays.asList("Monday", "Tuesday");// ,"Wednesday"
+        List<String> CustomerCodes = Arrays.asList("96619964", "96619964"); // "96619962","96619958" "C76801" ,"C75741"
         journeyPlanSetupPage.AddCustomers(WeeksWise, DayNames, CustomerCodes);
 
         journeyPlanSetupPage.Finalize();
